--- a/likha_ui/pubspec.yaml
+++ b/likha_ui/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   convex_bottom_bar: ^3.0.0
   fl_chart: ^0.68.0
   mobile_scanner: ^2.0.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
